# mcp-server-wazuh

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-all-in-one.yml  glama.json  run.sh
.github/workflows/: release.yml
docker/: docker-compose.wazuh-demo.yml  docker-compose.yml
src/: http_service.rs  lib.rs  logging_utils.rs  main.rs  stdio_service.rs
src/mcp/: client.rs  mcp_server_core.rs  mod.rs  protocol.rs  transform.rs
src/tools/: agents.rs  alerts.rs  mod.rs  rules.rs  stats.rs  vulnerabilities.rs
src/wazuh/: client.rs  error.rs
tests/: README.md  e2e_client_test.rs  integration_test.rs  mcp_client.rs  mcp_client_cli.rs  mcp_stdio_test.rs  mock_wazuh_server.rs  rmcp_integration_test.rs  run_tests.sh
