[package]
name = "mcp-server-wazuh"
version = "0.2.4"
edition = "2021"
description = "Wazuh SIEM MCP Server"
authors = ["Gianluca Brigandi <gbrigand@gmail.com>"]
license = "MIT"
repository = "https://github.com/gbrigandi/mcp-server-wazuh"
readme = "README.md"

[dependencies]
wazuh-client = "0.1.7" 
rmcp = { version = "0.1.5", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
schemars = "0.8"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
thiserror = "2.0"
chrono = "0.4.41"
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
mockito = "1.7"
anyhow = "1.0"
httpmock = "0.7"
uuid = { version = "1.16", features = ["v4"] }
once_cell = "1.21"
async-trait = "0.1"
regex = "1.11"
tokio-test = "0.4"
serde_json = "1.0"
tempfile = "3.0"

